k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-lb
  namespace: arc-runners
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000       # Public HTTP port
      targetPort: 5000     # App now listens on 5000 internally
